<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
       
       >
         <TextView
             android:layout_marginStart="10dp"
              android:padding="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/apprateinfo" />
        <HorizontalScrollView
                android:id="@+id/app_horizontalscrollview"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >
            <LinearLayout
                android:id="@+id/app_linearlayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal" >
            </LinearLayout>
              </HorizontalScrollView>
    
    
            
    </LinearLayout>
   

    <LinearLayout
         android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" >

		<TextView
             android:id="@+id/info_textview"
             android:layout_marginStart="5dp"
              android:padding="4dp"
              android:textColor="#888888"
              android:textSize="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/info" />
        <TextView
              android:layout_marginStart="10dp"
            android:padding="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/appcontrol" />

        <ListView
            android:id="@+id/app_ListView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#fcfcfc" >
        </ListView>
    </LinearLayout>

</LinearLayout>
